--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@splinetool/runtime": "^1.0.91",
     "vue": "^3.4.21"
   },
   "devDependencies": {
